header background image safari problem fixing

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -166,8 +166,8 @@ hr.small {
     background-size: cover;
     color: #fff;
     background-attachment: fixed;
+    z-index: -1;
 }
-
 
 /* About */
 
