--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -165,8 +165,8 @@ hr.small {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/bg.jpg) no-repeat center center scroll;
     background-size: cover;
     color: #fff;
-    background-attachment: fixed;
-    z-index: -1;
+    /*background-attachment: fixed;
+    z-index: -1;*/
 }
 
 /* About */
