--- a/css/queries.css
+++ b/css/queries.css
@@ -46,6 +46,20 @@
     .about-photo {
         text-align: center;
     }
+    .header {
+        position: relative;
+        display: table;
+        width: 100%;
+        height: 100%;
+        background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../img/bg.jpg) no-repeat center center scroll;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../img/bg.jpg) no-repeat center center scroll;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/bg.jpg) no-repeat center center scroll;
+        background-size: cover;
+        -o-background-size: cover;
+        -moz-background-size: cover;
+        -webkit-background-size:cover;
+        color: #fff;
+    }
 }
 
 @media only screen and (max-width: 480px)
