--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -244,7 +244,7 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
+    background: url(../img/responsive.jpg) no-repeat center center scroll;
     background-size: cover;
 }
 
