--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -5,6 +5,9 @@
  */
 
 
+/* Orange color: #ffba7f */
+
+
 /* Global Styles */
 
 html,
@@ -118,17 +121,17 @@ hr.small {
     text-decoration: none;
 }
 
-.sidebar-nav > .sidebar-brand {
+.sidebar-nav>.sidebar-brand {
     font-size: 18px;
     line-height: 55px;
     height: 55px;
 }
 
-.sidebar-nav > .sidebar-brand a {
+.sidebar-nav>.sidebar-brand a {
     color: #999;
 }
 
-.sidebar-nav > .sidebar-brand a:hover {
+.sidebar-nav>.sidebar-brand a:hover {
     color: #fff;
     background: none;
 }
@@ -153,6 +156,12 @@ hr.small {
     padding: 15px 20px;
 }
 
+.sidebar-nav .menu-item:hover {
+    background-color: #ffba7f;
+    color: #fff;
+    font-weight: 750;
+}
+
 
 /* Header */
 
@@ -167,10 +176,11 @@ hr.small {
     background-size: cover;
     -o-background-size: cover;
     -moz-background-size: cover;
-    -webkit-background-size:cover;
+    -webkit-background-size: cover;
     color: #fff;
     background-attachment: fixed;
 }
+
 
 /* About */
 
@@ -192,7 +202,7 @@ hr.small {
     color: #8d8d8d;
     text-transform: uppercase;
     border-left: thick double #ffba7f;
-    padding: 5px;    
+    padding: 5px;
 }
 
 .about-photo img {
@@ -200,16 +210,19 @@ hr.small {
     width: 75%;
     height: auto;
     -webkit-transform: scale(1.15);
-    -ms-transform: scale(1.15);
     transform: scale(1.15);
     -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
     transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 
 .about .btn-about {
     background-color: #ffba7f;
     color: white;
 }
+
 
 /* Services */
 
@@ -259,7 +272,7 @@ hr.small {
     margin-bottom: 30px;
 }
 
-.portfolio-item img{
+.portfolio-item img {
     height: 200px;
     width: auto;
 }
@@ -340,15 +353,19 @@ footer {
     color: rgba(233, 89, 80, 0.8);
 }
 
+
 /* Animations */
+
 .js--wp-1,
-.js--wp-2 {
+.js--wp-2,
+.js--wp-3 {
     opacity: 0;
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
 }
 
 .js--wp-1.animated,
-.js--wp-2.animated {
+.js--wp-2.animated,
+.js--wp-3.animated {
     opacity: 1;
 }
