--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -170,9 +170,9 @@ hr.small {
     display: table;
     width: 100%;
     height: 100%;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../img/bg2.jpg) no-repeat center center scroll;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../img/bg2.jpg) no-repeat center center scroll;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg2.jpg) no-repeat center center scroll;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../img/background-image2.jpg) no-repeat center center scroll;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../img/background-image2.jpg) no-repeat center center scroll;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/background-image2.jpg) no-repeat center center scroll;
     background-size: cover;
     -o-background-size: cover;
     -moz-background-size: cover;
